# embroidery-studio

./: .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.vitest.json  uno.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task_specification.md
.github/workflows/: ci.yml  combine-prs.yml  release.yml
src/: App.vue  fluent.ts  logger.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/extensions/: README.md
src-tauri/resources/locales/en/: app-welcome.ftl  buttons.ftl  common.ftl  fabric-properties.ftl  grid-properties.ftl  measurement-units.ftl  palette.ftl  preferences.ftl  stitches.ftl
src-tauri/resources/locales/uk/: app-welcome.ftl  buttons.ftl  common.ftl  fabric-properties.ftl  grid-properties.ftl  measurement-units.ftl  palette.ftl  preferences.ftl  stitches.ftl
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  state.rs
src-tauri/src/commands/: README.md  display.rs  fabric.rs  fonts.rs  grid.rs  mod.rs  palette.rs  pattern.rs  stitches.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/actions/: display.rs  display.test.rs  fabric.rs  fabric.test.rs  grid.rs  grid.test.rs  mod.rs  palette.rs  palette.test.rs  stitches.rs  stitches.test.rs
src-tauri/src/core/parser/: embproj.rs  format.rs  oxs.rs  xsd.rs
src-tauri/src/core/parser/oxs/: mod.rs  oxs.rs  utils.rs  v1.rs  v1_0.rs
src-tauri/src/core/parser/xsd/: xsd.rs  xsd.test.rs
src-tauri/src/core/parsers/: embproj.rs  oxs.test.rs  xsd.rs
src-tauri/src/core/pattern/: display.rs  mod.rs  pattern.rs  project.rs
src-tauri/src/core/pattern/stitches/: fullstitch.rs  line.rs  node.rs  partstitch.rs  special.rs  stitches.rs  stitches.test.rs
src-tauri/src/utils/: base64.rs  mod.rs
src-tauri/testdata/: windows-app-manifest.xml
src-tauri/testdata/patterns/: stitch_skull.oxs
src-tauri/tests/: pattern.rs
src/api/: display.ts  fabric.ts  fonts.ts  grid.ts  history.ts  index.ts  palette.ts  path.ts  pattern.ts  stitches.ts
src/assets/: reset.css  styles.css  utilities.css
src/assets/theme/: README.md  blockui.ts  button.ts  checkbox.ts  colorpicker.ts  contextmenu.ts  dialog.ts  divider.ts  fieldset.ts  floatlabel.ts  index.ts  inputnumber.ts  inputtext.ts  listbox.ts  menu.ts  menubar.ts  primitive.ts  progressspinner.ts  radiobutton.ts  select.ts  semantic.ts  splitter.ts  tieredmenu.ts  toggleswitch.ts  toolbar.ts  tooltip.ts  utilities.css
src/components/: AppHeader.vue  CanvasPanel.vue  PalettePanel.vue  WelcomePanel.vue
src/components/dialogs/: AppPreferences.vue  DialogFooter.vue  FabricProperties.vue  GridProperties.vue
src/components/palette/: PaletteCatalog.vue  PaletteDisplayOptions.vue  PaletteDisplaySettings.vue  PaletteItem.vue  PaletteList.vue  PalettePanel.vue  PaletteSection.vue
src/components/toolbar/: CanvasToolbar.vue  MainMenu.vue  PatternSelector.vue  ToolSelector.vue  ToolToggle.vue  WindowControls.vue
src/locales/: en.ftl  uk.ftl
src/plugins/pixi/: constants.ts  display-objects.ts  graphics.ts  index.ts  pattern-canvas.ts  pattern-view.ts  texture-manager.ts
src/plugins/pixi/extensions/: stitch-fonts-loader.ts
src/schemas/: display.ts  index.ts  pattern.ts  payload.ts  project.ts  utils.ts
src/schemas/pattern/: display.ts  index.ts  pattern.ts  project.ts
src/services/: pattern-view.ts
src/services/canvas/: canvas.service.ts  events.types.ts
src/stores/: patproj.ts  patterns.ts  preferences.ts  state.ts
src/utils/: color.test.ts  color.ts  map.test.ts  map.ts  paletteItem.test.ts  paletteItem.ts
(+3 files in other folders)
