[package]
name = "embroidery-studio"
version = "0.0.0"
edition = "2021"

[features]
test = []

[profile.release]
opt-level = "s"
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.2.5", features = ["test"] }
tauri-plugin-dialog = "2.0.5"
tauri-plugin-fs = "2.0.3"
tauri-plugin-log = "2.0.4"

# Parsing
byteorder = "1.5.0"
encoding_rs = "0.8.35"
memchr = "2.7.4"
hex = "0.4.3"
quick-xml = "0.37.2"

# Zipping
zip = { version = "2.2.2", features = ["zstd", "time"], default-features = false }
zip-extract = { version = "0.2.1", features = ["zstd", "time"], default-features = false }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
borsh = { version = "1.5.5", features = ["derive"] }
base64 = "0.22.1"

# Error handling
anyhow = "1.0.95"

# Logging
log = "0.4.25"

# Other
ordered-float = { version = "4.6.0", features = ["borsh"] }
dyn-clone = "1.0.17"
nutype = { git = "https://github.com/niusia-ua/nutype.git", branch = "feat/borsh", features = ["borsh"] }
tempfile = "3.15.0"
font-kit = "0.14.2"

[dev-dependencies]
rand = "0.9.0"
