[package]
name = "embroidery-studio"
edition = "2024"

[features]
test = []

[profile.release]
opt-level = "s"
lto = true
debug = "limited"
strip = "debuginfo"
split-debuginfo = "packed"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.4.0", features = ["test"] }
tauri-plugin-dialog = "2.0.5"
tauri-plugin-fs = "2.0.3"
tauri-plugin-log = "2.3.1"
tauri-plugin-opener = "2.2.6"

# Parsing
byteorder = "1.5.0"
encoding_rs = "0.8.35"
memchr = "2.7.4"
hex = "0.4.3"
quick-xml = "0.37.3"

# Zipping
zip = { version = "2.5.0", features = [
  "zstd",
  "time",
], default-features = false }
zip-extract = { version = "0.2.1", features = [
  "zstd",
  "time",
], default-features = false }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
borsh = { version = "1.5.7", features = ["derive"] }
base64 = "0.22.1"

# Error handling
anyhow = "1.0.97"

# Logging
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

# Other
ordered-float = { version = "5.0.0", features = ["borsh"] }
dyn-clone = "1.0.19"
nutype = { git = "https://github.com/niusia-ua/nutype.git", branch = "feat/borsh", features = [
  "borsh",
] }
tempfile = "3.19.1"
font-kit = "0.14.2"
convert_case = "0.8.0"

[dev-dependencies]
rand = "0.9.0"
